# interview

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yxb/interview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/yxb/server/: IMyAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp  yxb.cpp  yxb.h
app/src/main/java/com/example/yxb/interview/: AnimationActivity.java  HandlerActivity.java  MainActivity.kt  Person.java  RotationLifeCycleActivity.java  ServiceActivity.java
app/src/main/java/com/example/yxb/interview/animation/: AnimationActivity.java  FrameAnimationActivity.java  ObjectAnimationActivity.java
app/src/main/java/com/example/yxb/interview/scrollview/: RulerScrollerView.java  ScrollerViewActivity.java
app/src/main/java/com/example/yxb/interview/service/: BinderService.kt  ForegroundService.java  ForegroundService.kt  MyIntentService.java  NormalService.java
app/src/main/java/com/example/yxb/interview/util/: PermissionUtl.kt  Printer.java
app/src/main/res/drawable/: frame_animation.xml
app/src/main/res/layout/: activity_animation.xml  activity_frame_animation.xml  activity_main.xml  activity_ratation_lifecycler.xml  activity_scroller_view.xml  activity_service.xml  notification_layout.xml
app/src/main/res/values/: attrs.xml
app/src/test/java/com/example/yxb/interview/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
server/: build.gradle
server/src/main/: AndroidManifest.xml
server/src/main/res/layout/: activity_main.xml
(+5 files in other folders)
